readme, config, main, req

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,14 @@
 #
-# ▄▄▄        ██████ ▄▄▄█████▓ ██▀███   ▒█████   ██▓███   ██▓       ▄▄▄▄    ▄▄▄       ██▓    ▓█████ 
-#▒████▄    ▒██    ▒ ▓  ██▒ ▓▒▓██ ▒ ██▒▒██▒  ██▒▓██░  ██▒▓██▒      ▓█████▄ ▒████▄    ▓██▒    ▓█   ▀ 
-#▒██  ▀█▄  ░ ▓██▄   ▒ ▓██░ ▒░▓██ ░▄█ ▒▒██░  ██▒▓██░ ██▓▒▒██▒      ▒██▒ ▄██▒██  ▀█▄  ▒██░    ▒███   
-#░██▄▄▄▄██   ▒   ██▒░ ▓██▓ ░ ▒██▀▀█▄  ▒██   ██░▒██▄█▓▒ ▒░██░      ▒██░█▀  ░██▄▄▄▄██ ▒██░    ▒▓█  ▄ 
-# ▓█   ▓██▒▒██████▒▒  ▒██▒ ░ ░██▓ ▒██▒░ ████▓▒░▒██▒ ░  ░░██░      ░▓█  ▀█▓ ▓█   ▓██▒░██████▒░▒████▒
-# ▒▒   ▓▒█░▒ ▒▓▒ ▒ ░  ▒ ░░   ░ ▒▓ ░▒▓░░ ▒░▒░▒░ ▒▓▒░ ░  ░░▓        ░▒▓███▀▒ ▒▒   ▓▒█░░ ▒░▓  ░░░ ▒░ ░
-#  ▒   ▒▒ ░░ ░▒  ░ ░    ░      ░▒ ░ ▒░  ░ ▒ ▒░ ░▒ ░      ▒ ░      ▒░▒   ░   ▒   ▒▒ ░░ ░ ▒  ░ ░ ░  ░
-#  ░   ▒   ░  ░  ░    ░        ░░   ░ ░ ░ ░ ▒  ░░        ▒ ░       ░    ░   ░   ▒     ░ ░      ░   
-#      ░  ░      ░              ░         ░ ░            ░         ░            ░  ░    ░  ░   ░  ░
-#                                                                       ░                          
-#
+# ▄▄▄        ██████ ▄▄▄█████▓ ██▀███   ▒█████        ▓█████ ▒███████▒
+#▒████▄    ▒██    ▒ ▓  ██▒ ▓▒▓██ ▒ ██▒▒██▒  ██▒      ▓█   ▀ ▒ ▒ ▒ ▄▀░
+#▒██  ▀█▄  ░ ▓██▄   ▒ ▓██░ ▒░▓██ ░▄█ ▒▒██░  ██▒      ▒███   ░ ▒ ▄▀▒░ 
+#░██▄▄▄▄██   ▒   ██▒░ ▓██▓ ░ ▒██▀▀█▄  ▒██   ██░      ▒▓█  ▄   ▄▀▒   ░
+# ▓█   ▓██▒▒██████▒▒  ▒██▒ ░ ░██▓ ▒██▒░ ████▓▒░      ░▒████▒▒███████▒
+# ▒▒   ▓▒█░▒ ▒▓▒ ▒ ░  ▒ ░░   ░ ▒▓ ░▒▓░░ ▒░▒░▒░       ░░ ▒░ ░░▒▒ ▓░▒░▒
+#  ▒   ▒▒ ░░ ░▒  ░ ░    ░      ░▒ ░ ▒░  ░ ▒ ▒░        ░ ░  ░░░▒ ▒ ░ ▒
+#  ░   ▒   ░  ░  ░    ░        ░░   ░ ░ ░ ░ ▒           ░   ░ ░ ░ ░ ░
+#      ░  ░      ░              ░         ░ ░           ░  ░  ░ ░    
+#                                                           ░        
 [Generali]
 numero_di_cicli = 410
 intervallo_tra_cicli = 26
@@ -17,7 +16,7 @@ intervallo_tra_cicli = 26
 # True or False
 fotocamera = True
 sensori = True
-gelolocalizzazione = True
+#gelolocalizzazione = True <= Manutenzione
 
 
 [Fotocamera]
@@ -85,7 +84,6 @@ bilanciamento_bianchi = auto
 umidita = True
 temperatura = True
 pressione = True
-magnetismo = True
 orientamento = True
 giroscopio = True
 giroscopio_raw = False
